# Coursework-4-Mailing-management-service

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
app_mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
app_mailing/management/commands/: send_mailing.py
app_mailing/migrations/: 0001_initial.py  0002_alter_mailing_table_alter_mailingrecipient_table_and_more.py  0003_rename_mailingrecipient_recipient_and_more.py  0004_attempt.py  0005_recipient_owner.py  0006_attempt_owner_mailing_owner_message_owner_and_more.py  0007_alter_recipient_email_and_more.py
app_mailing/templates/app_mailing/: base.html  mailing_list.html  menu.html  message_list.html  recipient_add_update.html  recipient_list.html
app_mailing/templates/app_mailing/home/: main.html
app_mailing/templates/app_mailing/mailing/: mailing_add_update.html  mailing_delete.html  mailing_list.html
config/: settings.py  urls.py
data/fixtures/: add_mailings.json  add_messages.json  add_recipients.json
nginx/: Dockerfile  nginx.conf
users/: admin.py  forms.py  managers.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_alter_appuser_avatar.py  0003_alter_appuser_managers.py  0004_alter_appuser_options.py  0005_alter_appuser_options_appuser_is_blocked.py
users/templates/users/: email_confirmation.html  email_confirmation_sent.html  login.html  register.html  start.html
(+13 files in other folders)
