[project]
name = "coursework-4-mailing-management-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Lakovich",email = "maks.lakovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "django-apscheduler (>=0.7.0,<0.8.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-redis (>=6.0.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"

